updated keywords for npmjs

--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "ember-try": "0.0.4"
   },
   "keywords": [
-    "ember-addon"
+    "ember-addon", "active", "ember", "showing", "controller"
   ],
   "dependencies": {
     "ember-cli-babel": "^5.0.0"
